--- a/main.html
+++ b/main.html
@@ -7,7 +7,11 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+	
+	<div id="container">
+		This is the main content element
+	</div>
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
