--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 <body>
 	
 	<div id="container">
-		This is the main content element
+		This is the main container element
 	</div>
 	
     <script type="text/javascript" src="./script.js">
